# duplicate-file-finder

./: .gitignore  CLAUDE.md  README.md  TASKS.md  find_duplicates.py  organize_files.py  pair_raw.py  photo_organize.py  pyproject.toml  requirements.txt  rules_presets.py  streamlit_app.py  undo_actions.py
core/: __init__.py  actions.py  dupe.py  hashers.py  media_scanner.py  media_types.py  metadata.py  naming.py  oplog.py  organizer.py  pairing.py  paths.py  photo_executor.py  photo_pairing.py  photo_planner.py  report.py  scanner.py  similar.py  types.py  undo.py
tests/: conftest.py  test_actions.py  test_dupe.py  test_naming.py  test_organizer.py  test_pairing.py  test_photo_planner.py  test_scanner.py  test_similar.py  test_undo.py
ui/: common.py  dupe.py  organizer.py  pairing.py  photo.py  similar.py  single_dupe.py  undo_ui.py
